# Teste_BeFly

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
data/raw/: country_metadata.csv  hotel_metadata.csv
docs/: case_tecnico_befly.md  system_requirements.md
notebooks/: 1.0-EDA_Initial.ipynb
src/: run.py
src/errors/: infra_errors.py  layer_errors.py
src/infra/interfaces/: i_reader.py  i_writer.py
src/infra/repositories/: csv_repository.py  parquet_repository.py
src/infra/spark/: session_factory.py
src/main/: config.py  main.py
src/schemas/bronze/: bookings_schema.py  countries_schema.py  hotels_schema.py
src/schemas/silver/: bookings_enriched_schema.py
src/stages/bronze/: ingest_bookings.py  ingest_countries.py  ingest_hotels.py  rules.py
src/stages/gold/: cancellation_by_segment.py  revenue_by_hotel_month.py  rules.py  top_countries_by_revenue.py
src/stages/silver/: build_bookings_enriched.py  rules.py
src/utils/: decorators.py  logger.py  quality_report.py
tests/: conftest.py
tests/unit/stages/bronze/: test_rules.py
tests/unit/stages/gold/: test_rules.py
tests/unit/stages/silver/: test_rules.py
